<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".EditActivity" android:id="@+id/ConstraintLayout">
    <EditText
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/companyEdit"
            android:hint="@string/company_hint" android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"/>
    <EditText
            android:layout_width="146dp"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/postalEdit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/companyEdit"
            app:layout_constraintStart_toStartOf="@+id/companyEdit"
            android:hint="@string/postal_hint" />
    <EditText
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/addressEdit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/postalEdit"
            app:layout_constraintStart_toStartOf="@+id/postalEdit" android:hint="@string/address_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/telEdit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/addressEdit"
            app:layout_constraintStart_toStartOf="@+id/addressEdit" android:hint="@string/tel_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/faxEdit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/telEdit"
            app:layout_constraintStart_toStartOf="@+id/telEdit" android:hint="@string/fax_hint"
            />
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEdit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/faxEdit"
            app:layout_constraintStart_toStartOf="@+id/faxEdit" android:hint="@string/email_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:ems="10"
            android:id="@+id/urlEdit" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/emailEdit"
            app:layout_constraintStart_toStartOf="@+id/emailEdit" android:hint="@string/url_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:ems="10"
            android:id="@+id/positionEdit"
            app:layout_constraintStart_toStartOf="@+id/urlEdit"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/urlEdit"
            android:hint="@string/position_hint"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/nameEdit"
            android:hint="@string/name_hint" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/positionEdit"
            app:layout_constraintStart_toStartOf="@+id/positionEdit"/>
    <Button
            android:text="@string/save_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/saveButton"
            app:layout_constraintStart_toStartOf="@+id/nameEdit"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/nameEdit"
    />
    <Button
            android:text="@string/cancel_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancelButton"
            app:layout_constraintTop_toTopOf="@+id/saveButton" app:layout_constraintStart_toEndOf="@+id/saveButton"
            android:layout_marginLeft="24dp" android:layout_marginStart="24dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>